Bug 820084 - Fix handling of thisv value when top-level script is entered into via enterJIT. r=sstangl