js/src/ion/Ion.cpp
@@ -1512,6 +1512,7 @@ EnterIon(JSContext *cx, StackFrame *fp, void *jitcode)
     int maxArgc = 0;
     Value *maxArgv = NULL;
     int numActualArgs = 0;
+    RootedValue thisv(cx);
 
     void *calleeToken;
     if (fp->isFunctionFrame()) {
@@ -1540,6 +1541,9 @@ EnterIon(JSContext *cx, StackFrame *fp, void *jitcode)
         calleeToken = CalleeToToken(&fp->callee());
     } else {
         calleeToken = CalleeToToken(fp->script());
+        thisv = fp->thisValue();
+        maxArgc = 1;
+        maxArgv = thisv.address();
     }
 
     // Caller must construct |this| before invoking the Ion function.
